// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MSIX > MSIX 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
  ],
}
`;

exports[`MSIX > msix application id 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
  ],
}
`;

exports[`MSIX > msix auto launch extension 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
  ],
}
`;

exports[`MSIX > msix custom template manifest 1`] = `
"<?xml version="1.0" encoding="utf-8"?>
<!--suppress XmlUnusedNamespaceDeclaration -->
<Package
   xmlns="http://schemas.microsoft.com/appx/manifest/foundation/windows10"
   xmlns:uap="http://schemas.microsoft.com/appx/manifest/uap/windows10"
   xmlns:desktop="http://schemas.microsoft.com/appx/manifest/desktop/windows10"
   xmlns:desktop2="http://schemas.microsoft.com/appx/manifest/desktop/windows10/2"
   xmlns:rescap="http://schemas.microsoft.com/appx/manifest/foundation/windows10/restrictedcapabilities">
  <!-- use single quotes to avoid double quotes escaping in the publisher value  -->
  <Identity Name="TestApp"
    ProcessorArchitecture="x64"
    Publisher='CN=ms'
    Version="1.1.0.0" />
  <Properties>
    <DisplayName>Test App ßW</DisplayName>
    <PublisherDisplayName>Foo Bar</PublisherDisplayName>
    <Description>Test Application (test quite “ #378)</Description>
    <Logo>assets\\StoreLogo.png</Logo>
  </Properties>
  <Resources>
    <Resource Language="en-US" />
  </Resources>
  <Dependencies>
    <TargetDeviceFamily Name="Windows.Desktop" MinVersion="10.0.17763.0" MaxVersionTested="10.0.17763.0" />
  </Dependencies>
  <Capabilities>
    <rescap:Capability Name="runFullTrust"/>
  </Capabilities>
  <Applications>
    <Application Id="TestApp" Executable="app\\Test App ßW.exe" EntryPoint="Windows.FullTrustApplication">
      <uap:VisualElements
       BackgroundColor="#464646"
       DisplayName="Test App ßW"
       Square150x150Logo="assets\\Square150x150Logo.png"
       Square44x44Logo="assets\\Square44x44Logo.png"
       Description="Test Application (test quite “ #378)">
        
        <uap:DefaultTile Wide310x150Logo="assets\\Wide310x150Logo.png" />
        
      </uap:VisualElements>
      <!-- <Extensions>
        <desktop2:Extension Category="windows.firewallRules">
          <desktop2:FirewallRules Executable="app\\Test App ßW.exe">
            <desktop2:Rule Direction="in" Profile="private" IPProtocol="TCP" LocalPortMin="22022" LocalPortMax="24044"/>
          </desktop2:FirewallRules>
        </desktop2:Extension>
      </Extensions> -->
    </Application>
  </Applications>
</Package>
"
`;

exports[`MSIX > msix custom template manifest 2`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
  ],
}
`;

exports[`MSIX > msix enforcePackageIntegrity manifest contains uap10 element 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
  ],
}
`;

exports[`MSIX > msix languages and not signed (windows store only) 1`] = `
{
  "win": [
    {
      "arch": "ia32",
      "file": "Test App ßW 1.1.0 ia32.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
    {
      "file": "Test App ßW 1.1.0.msixbundle",
      "safeArtifactName": "TestApp-1.1.0.msixbundle",
    },
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
  ],
}
`;

exports[`MSIX > msix multi-arch build creates msixbundle and msixupload 1`] = `
{
  "win": [
    {
      "arch": "ia32",
      "file": "Test App ßW 1.1.0 ia32.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
    {
      "file": "Test App ßW 1.1.0.msixbundle",
      "safeArtifactName": "TestApp-1.1.0.msixbundle",
    },
    {
      "file": "Test App ßW 1.1.0.msixupload",
      "safeArtifactName": "TestApp-1.1.0.msixupload",
    },
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
  ],
}
`;

exports[`MSIX > msix valid capabilities 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
  ],
}
`;

exports[`MSIX > msix windowsServices manifest contains desktop6 elements 1`] = `
{
  "win": [
    {
      "arch": "x64",
      "file": "Test App ßW 1.1.0.msix",
      "safeArtifactName": "TestApp-1.1.0.msix",
    },
  ],
}
`;
